--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "angular-font-awesome": "^3.1.2",
+    "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "ngx-image-cropper": "^2.0.0",
