--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.7",
-    "@angular/cdk": "^8.2.0",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
     "@angular/core": "~8.2.4",
@@ -22,7 +22,13 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@ngx-share/button": "^7.1.4",
+    "@ngx-share/core": "^7.1.4",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "angular-font-awesome": "^3.1.2",
@@ -30,6 +36,7 @@
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "ngx-image-cropper": "^2.0.0",
+    "ngx-sharebuttons": "^3.0.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
@@ -39,10 +46,11 @@
     "@angular-devkit/build-angular": "~0.803.2",
     "@angular/cli": "~8.3.2",
     "@angular/compiler-cli": "~8.2.4",
+    "@angular/http": "^7.2.15",
     "@angular/language-service": "~8.2.4",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
