--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "e2e": "ng e2e",
     "postinstall": "ng build --aot --prod"
   },
-  "engines": { "node": "10.16.3", "npm": "6.9.0" },
+  "engines": {
+    "node": "10.16.3",
+    "npm": "6.9.0"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.7",
     "@angular/cdk": "^8.2.3",
+    "@angular/cli": "~8.3.2",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
+    "@angular/compiler-cli": "~8.2.4",
     "@angular/core": "~8.2.4",
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.4",
@@ -36,16 +41,15 @@
     "angular-font-awesome": "^3.1.2",
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "ngx-image-cropper": "^2.0.0",
     "ngx-sharebuttons": "^3.0.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "@angular/cli": "~8.3.2",
-    "@angular/compiler-cli": "~8.2.4",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.2",
