--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular/compiler": "~8.2.4",
+    "@angular/compiler-cli": "~8.2.4",
     "@angular-devkit/build-angular": "~0.803.2",
     "@angular/http": "^7.2.15",
     "@angular/language-service": "~8.2.4",
