--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "postinstall": "ng build --aot --target=production"
   },
   "engines": {
     "node": "10.16.3",
@@ -52,8 +52,6 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/compiler": "~8.2.4",
-    "@angular/compiler-cli": "~8.2.4",
     "@angular-devkit/build-angular": "~0.803.2",
     "@angular/http": "^7.2.15",
     "@angular/language-service": "~8.2.4",
@@ -71,7 +69,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
 
   }
 }
