--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
   "dependencies": {
     "@angular/animations": "^8.2.7",
     "@angular/cdk": "^8.2.3",
-    "@angular/cli": "~8.3.2",
-    "@angular/common": "~8.2.4",
+    "@angular/common": "^8.2.11",
     "@angular/compiler": "~8.2.4",
-    "@angular/compiler-cli": "~8.2.4",
     "@angular/core": "~8.2.4",
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.4",
@@ -48,10 +46,12 @@
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
-    "typescript": "~3.5.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular/cli": "~8.3.2",
+    "@angular/compiler-cli": "~8.2.4",
+    "typescript": "~3.5.3",
     "@angular-devkit/build-angular": "~0.803.2",
     "@angular/http": "^7.2.15",
     "@angular/language-service": "~8.2.4",
