--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "postinstall": "ng build"
   },
   "engines": {
     "node": "10.16.3",
@@ -16,6 +16,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~8.3.2",
+    "@angular/compiler-cli": "~8.2.4",
     "@angular/animations": "^8.2.7",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.11",
@@ -49,8 +51,6 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "~8.3.2",
-    "@angular/compiler-cli": "~8.2.4",
     "typescript": "~3.5.3",
     "@angular-devkit/build-angular": "~0.803.2",
     "@angular/http": "^7.2.15",
