--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build"
+    "postinstall": "ng build --aot --prod"
   },
   "engines": {
     "node": "10.16.3",
@@ -16,6 +16,7 @@
   },
   "private": true,
   "dependencies": {
+    "typescript": "~3.5.3",
     "@angular/cli": "~8.3.2",
     "@angular/compiler-cli": "~8.2.4",
     "@angular/animations": "^8.2.7",
@@ -51,7 +52,6 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "typescript": "~3.5.3",
     "@angular-devkit/build-angular": "~0.803.2",
     "@angular/http": "^7.2.15",
     "@angular/language-service": "~8.2.4",
