--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "ngx-image-cropper": "^2.0.0",
+    "ngx-scroll-event": "^1.0.8",
     "ngx-sharebuttons": "^3.0.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
