--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "ngx-image-cropper": "^2.0.0",
+    "ngx-quill": "^7.3.9",
     "ngx-scroll-event": "^1.0.8",
     "ngx-sharebuttons": "^3.0.0",
+    "quill": "^1.3.7",
+    "quill-mention": "^2.1.5",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
