--- a/package.json
+++ b/package.json
@@ -39,13 +39,17 @@
     "angular-font-awesome": "^3.1.2",
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
+    "ckeditor": "^4.12.1",
+    "ckeditor5": "^15.0.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "ng2-ckeditor": "^1.2.6",
     "ngx-image-cropper": "^2.0.0",
     "ngx-quill": "^7.3.9",
     "ngx-scroll-event": "^1.0.8",
     "ngx-sharebuttons": "^3.0.0",
     "quill": "^1.3.7",
+    "quill-emoji": "^0.1.7",
     "quill-mention": "^2.1.5",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
